--- a/src/MyFinanceWeb.Infra.IoC/MyFinanceWeb.Infra.IoC.csproj
+++ b/src/MyFinanceWeb.Infra.IoC/MyFinanceWeb.Infra.IoC.csproj
@@ -1,15 +1,19 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
-  <ItemGroup>
-    <ProjectReference Include="..\MyFinanceWeb.Domain\MyFinanceWeb.Domain.csproj" />
-    <ProjectReference Include="..\MyFinanceWeb.Infra.Data\MyFinanceWeb.Infra.Data.csproj" />
-    <ProjectReference Include="..\MyFinanceWeb.Application\MyFinanceWeb.Application.csproj" />
-  </ItemGroup>
+	<ItemGroup>
+		<ProjectReference Include="..\MyFinanceWeb.Domain\MyFinanceWeb.Domain.csproj" />
+		<ProjectReference Include="..\MyFinanceWeb.Infra.Data\MyFinanceWeb.Infra.Data.csproj" />
+		<ProjectReference Include="..\MyFinanceWeb.Application\MyFinanceWeb.Application.csproj" />
+	</ItemGroup>
+	
+	<ItemGroup>
+		<PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
+	</ItemGroup>
 
-  <PropertyGroup>
-    <TargetFramework>net7.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
-  </PropertyGroup>
+	<PropertyGroup>
+		<TargetFramework>net7.0</TargetFramework>
+		<ImplicitUsings>enable</ImplicitUsings>
+		<Nullable>enable</Nullable>
+	</PropertyGroup>
 
 </Project>
