--- a/src/MyFinanceWeb.Infra.IoC/MyFinanceWeb.Infra.IoC.csproj
+++ b/src/MyFinanceWeb.Infra.IoC/MyFinanceWeb.Infra.IoC.csproj
@@ -1,6 +1,12 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="12.0.1" />
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\MyFinanceWeb.Application\MyFinanceWeb.Application.csproj" />
     <ProjectReference Include="..\MyFinanceWeb.Domain\MyFinanceWeb.Domain.csproj" />
     <ProjectReference Include="..\MyFinanceWeb.Infra.Data\MyFinanceWeb.Infra.Data.csproj" />
   </ItemGroup>
